--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     </head>
 
     <body>
-        <p id="ip-address"></p>
+        <div>
+            <div><p>Your public IP Address:<b id="ip-address"></b></p></div>
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script> 
