--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <script>
             $(document).ready(function(){
                 cookieIp = document.cookie.split(' ').join();
-                if (document.cookie) alert(document.cookie)
+                //if (document.cookie) alert(document.cookie)
             });
         </script>
 
