--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </tr>-->
 
                     <tr>
-                        <td>Internet Service Provider: </td>
+                        <td>ISP: </td>
                         <td id="isp"></td>
                     </tr>
 
