--- a/index.html
+++ b/index.html
@@ -159,9 +159,10 @@
                     })*/
 
                     var ipDetailsLink = "https://ipinfo.io/?token=ec63c5a229286d"
-                    $("#ip-detail-link").html("<a href='"+ipDetailsLink+"'>Check out Raw Details here</a>")
+                    //$("#ip-detail-link").html("<a href='"+ipDetailsLink+"'>Check out Raw Details here</a>")
+                    $("#ip-detail-link").html("<a href='http://ip-api.com/json/"+data.ip+"?fields=12133375'>Check out Raw Details here</a>")
                     $("#ip-add-link").html("<a href='"+ipLink+"'>Check out Raw IP here</a>")
-                    
+
                     $.getJSON(ipDetailsLink, function(data){
                         $("#country-code").html(data.country)
 
