na changed to -

--- a/index.html
+++ b/index.html
@@ -19,72 +19,72 @@
                     <tbody>
                         <tr>
                             <th scope="row">IPv4 Address:</th>
-                            <td id="ip-address">na</td>
+                            <td id="ip-address">-</td>
                         </tr>
 
                         <!--<tr>
                             <th scope="row">IP Version:</th>
-                            <td id="ip-version">na</td>
+                            <td id="ip-version">-</td>
                         </tr>-->
 
                         <tr>
                             <th scope="row">City: </th>
-                            <td id="city">na</td>
+                            <td id="city">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Region: </th>
-                            <td id="region-name">na</td>
+                            <td id="region-name">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Postal Code: </th>
-                            <td id="postal-code">na</td>                        
+                            <td id="postal-code">-</td>                        
                         </tr>
 
                         <!--<tr>
                             <th scope="row">Country Name: </th></td>
-                            <td id="country-name">na</td>
+                            <td id="country-name">-</td>
                         </tr>-->
 
                         <tr>
                             <th scope="row">Country Code: </th>
-                            <td id="country-code">na</td>
+                            <td id="country-code">-</td>
                         </tr>
 
                         <!--<tr>
                             <th scope="row">Currency: </th>
-                            <td id="currency">na</td>
+                            <td id="currency">-</td>
                         </tr>-->
 
                         <tr>
                             <th scope="row">ISP: </th>
-                            <td id="isp">na</td>
+                            <td id="isp">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Latitude: </th>
-                            <td id="latitude">na</td>
+                            <td id="latitude">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Longitude: </th>
-                            <td id="longitude">na</td>                        
+                            <td id="longitude">-</td>                        
                         </tr>
 
                         <tr>
                             <th scope="row">Time Zone: </th>
-                            <td id="timezone">na</td>
+                            <td id="timezone">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Date: </th>
-                            <td id="date">na</td>
+                            <td id="date">-</td>
                         </tr>
 
                         <tr>
                             <th scope="row">Time: </th>
-                            <td id="time">na</td>
+                            <td id="time">-</td>
                         </tr>
                     </tbody>
                 </table>  
