--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
         <div id="main">
             <div id="ip-details"><h1>Your public IP Address details:</h1>
                 <table class="table table-striped">
-                    <caption>Some details may not be accurate. This depends on your browser privacy, IP Address Servers, VPN, Proxy and other protocols.<br/>
-                        This page is static. To load the latest stats, refresh this page.</caption>
+                    <caption>
+                        Some details may not be accurate. This depends on your browser privacy, IP Address Servers, VPN, Proxy and other protocols.<br/>
+                        This page is static. To load the latest stats, refresh this page.<br/><br/>
+                        <strong>* This site will not work if you have disabled Javascript in your browser *<br/>
+                        ** Users of <em>Brave Browser</em> need to Disable Brave Sheilds for this site. **</strong><br/>
+                        <em>This site doesn't take any personal information of yours. It is just a simple open-source project to display IP Details.<br/>
+                        It is intended for users who want to check their public details on Internet.<br/>
+                        It can be used for educational purposes and checking the efficiency of your Network (Tor, VPN, etc.)</em>
+                    </caption>
                     <tbody>
                         <tr>
                             <th scope="row">IPv4 Address:</th>
