--- a/index.html
+++ b/index.html
@@ -195,6 +195,14 @@
                 $("#date").html(date)
                 $("#time").html(time)
             });
-        </script>    
+        </script>  
+        <footer class="bg-light text-center text-lg-start">
+            <!-- Copyright -->
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                © 2020 Copyright:
+                <a class="text-dark" href="https://github.com/Chiku1022/">Charitra Agarwal</a>
+            </div>
+            <!-- Copyright -->
+    </footer>  
     </body>
 </html>
