--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Your IP address</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" 
+            content="Know your public IPv4 Address, City, Region, Country Code, Internet Service Provider, Postal Code, Latitude, Longitude, Time Zone.">
 
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
