--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Your IP address</title>
+        <title>Know Your Public IP Details</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" 
             content="Know your public IPv4 Address, City, Region, Country Code, Internet Service Provider, Postal Code, Latitude, Longitude, Time Zone.">
 
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
+        <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -16,7 +16,9 @@
 
     <body>
         <div id="main">
-            <div id="ip-details"><h1>Your public IP Address details:</h1>
+            <div id="ip-details">
+                <div class="header"><img class="heading-logo" src="/images/icon.svg" /><h1>Your public IP Address details:</h1></div>
+
                 <table class="table table-striped">
                     <caption>
                         Some details may not be accurate. This depends on your browser privacy, IP Address Servers, VPN, Proxy and other protocols.<br/>
