added open grapgh info

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" 
             content="Know your public IPv4 Address, City, Region, Country Code, Internet Service Provider, Postal Code, Latitude, Longitude, Time Zone.">
+        
+        <meta property="og:title" content="View Public IP Address and Details" />
+        <meta property="og:url" content="https://knowipaddress.netlify.app/" />
+        <meta property="og:description" content="View your network's public IP Address and the public details of you that's present on the Internet. See how secure you are on the Internet." />
+        <meta property="og:type" content="website" />
 
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
