--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:url" content="https://knowipaddress.netlify.app/" />
         <meta property="og:description" content="View your network's public IP Address and the public details of you that's present on the Internet. See how secure you are on the Internet." />
         <meta property="og:type" content="website" />
+        <meta property="og:image" content="/image/icon.svg" />
 
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
