--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <footer class="bg-light text-center text-lg-start">
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-                © 2020 Copyright:
+                © 2020-<script>document.write(new Date().getFullYear())</script> Copyright:
                 <a class="text-dark" href="https://github.com/Chiku1022/">Charitra Agarwal</a>
             </div>
             <!-- Copyright -->
