TESTING ENV VARIABLE

--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
 
                         $("#timezone").html(data.timezone)
                     })*/
+                    
+                    alert(process.env.IPINFO_TOKEN)
 
                     var ipDetailsLink = "https://ipinfo.io/?token=ec63c5a229286d"
                     //$("#ip-detail-link").html("<a href='"+ipDetailsLink+"'>Check out Raw Details here</a>")
