--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://knowipaddress.netlify.app/images/icon.svg" />
 
+        <link rel="canonical" href="https://knowipaddress.netlify.app/" />
+
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/ico" href="/images/favicon.ico">
 
