--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <!-- Copyright -->
             <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
                 © 2020-<script>document.write(new Date().getFullYear())</script> Copyright:
-                <a class="text-dark" href="https://github.com/Chiku1022/">Charitra Agarwal</a>
+                <a class="text-dark" href="https://github.com/Charitra1022/">Charitra Agarwal</a>
             </div>
             <!-- Copyright -->
     </footer>  
