--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         This page is static. To load the latest stats, refresh this page.<br/><br/>
                         <strong>* This site will not work if you have disabled Javascript in your browser *<br/>
                         ** Users of <em>Brave Browser</em> need to Disable Brave Sheilds for this site. **</strong><br/>
-                        <em>This site doesn't take any personal information of yours. It is just a simple open-source project to display IP Details. Check out this project <a href="https://github.com/charitra1022/ip-address/">here</a><br/>
+                        <em>This site doesn't take any personal information of yours. It is just a simple open-source project to display IP Details. Check out this project <a href="https://github.com/charitra1022/ip-address/">here</a>.<br/>
                         It is intended for users who want to check their public details on Internet.<br/>
                         It can be used for educational purposes and checking the efficiency of your Network (Tor, VPN, etc.)</em>
                     </caption>
